--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".DreamyColorApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DreamyColor"
         tools:targetApi="35">
+        <activity
+            android:name=".resourcepage.LoveLiveResourcePageActivity"
+            android:exported="false"
+            android:theme="@style/Theme.DreamyColor" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
